// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`debts.remove > functionality > auto-accepted by counterparty > debt does not exist 1`] = `
{
  "deleted": {
    "debts": {
      "id:d3af4cb4-ace1-44e3-a2d2-2698f7188e11|ownerAccountId:ba3fd356-765a-44cd-a500-6f9844a84908": undefined,
    },
  },
}
`;

exports[`debts.remove > functionality > auto-accepted by counterparty > debt exists 1`] = `
{
  "deleted": {
    "debts": {
      "id:2e34b38e-b509-4be5-bd8f-b75ca2fc9eb2|ownerAccountId:458fcda8-4d28-40bb-b948-5fb013fa1bba": undefined,
      "id:2e34b38e-b509-4be5-bd8f-b75ca2fc9eb2|ownerAccountId:f4841511-75cd-4c9c-8a58-a18c9d026f47": undefined,
    },
  },
}
`;

exports[`debts.remove > functionality > not auto-accepted by counterparty 1`] = `
{
  "deleted": {
    "debts": {
      "id:249bca7b-8f63-42fb-8fcc-1842b08fdf04|ownerAccountId:688c76d7-c4f7-4a72-8bb0-3141f90cf2e3": undefined,
    },
  },
}
`;
